# lutcomp

./: .gitignore  .gitmodules  Cargo.toml  README.md  array.txt  build.bat  build.sh  carry.txt  echochar.circ  edit.sh  lutcomp.circ  parts.txt  program.txt  spi.md  thoughts.txt
.github/workflows/: rust.yml
1x8/src/: assembly.pest
1x8/tests/: fib.asm  hi.asm
3x8/: Cargo.toml  README.md  lutcomp.circ  parts.txt
3x8/src/: assembly.pest  extmem.asm  main.rs
4x6/: README.md
6x4/: Cargo.toml  README.md  lutcomp.circ
6x4/src/: add32ext.asm  assembly.pest  extmem.asm  hi.asm  main.rs  printhex.asm
6x4/tests/: hi.asm  hi.hex
8x1/: echochar.circ
8x1/src/: main.rs
acc/: .rustfmt.toml  Cargo.toml  README.md  echo.asm  halt.asm  hi.asm  lutcomp.circ  test.sh
acc/alu/: Cargo.toml
acc/alu/src/: bin.rs  lib.rs  main.rs
acc/alu_exp/: Cargo.toml
acc/alu_exp/src/: main.rs
acc/app/: Cargo.toml
acc/app/src/: main.rs
acc/assemble/: Cargo.toml
acc/assemble/src/: assembly.pest  bin.rs  lib.rs
acc/common/: Cargo.toml
acc/common/src/: lib.rs
acc/compiler/: Cargo.toml
acc/compiler/src/: j.pest  main.rs
acc/controller/: controller.ino
acc/programs/: add.j  call_parameterless.j  divide.j  echo.asm  fac.j  fac_iter.j  fac_rec.j  fib.j  halt.j  hi.asm  idfn.j  if_eq.j  if_gt.j  if_gte.j  if_lt.j  if_lte.j  if_ne.j  main_args.j  plusone.j  printHex.j
acc/sim/: Cargo.toml
acc/sim/src/: lib.rs
acc/src/: assembly.pest  main.rs
acc/ucode/: Cargo.toml
acc/ucode/src/: bin.rs  lib.rs  main.rs
alu/: Cargo.toml
alu/src/: lib.rs  main.rs
alu_exp/src/: main.rs
app/: Cargo.toml
app/src/: main.rs
arduino/: modify_return_address.txt
arduino/controller/: controller.ino
arduino/lcd_tester/: lcd_tester.ino
assemble/: Cargo.toml
assemble/src/: assembly.pest  lib.rs  main.rs
circuit/: .gitignore  AC780S.dig  AC780S.vhdl  HD44780U.dig  HD44780U.vhdl  SST39SF040.dig  ascii_to_ps2.hex  bootram.hex  cgrom.hex  echo.asm.hex  echo.j.hex  echo_lcd.hex  hello_ram.hex  io.dig  keyboard_isr.hex  keyboard_poll.ram.hex  lcd.dig  lcd_driver.vhdl  lutcomp.dig  memory.dig  pc.dig  ps2.dig  ps2_decoder.dig  ps2_encoder.dig  ps2_isr.hex  ps2_test.dig  ps2_to_ascii.hex  queue_perf.hex  queue_simple.hex  rpn.hex  rpn_ram.hex  serial_rom.dig  shift_reg.dig  spicomp.dig  test.txt  ttymux.dig  uc.dig
circuit/ps2spice/: .gitignore  README.md  SN74HCT14.cir  ps2spice.kicad_prl  ps2spice.kicad_pro  ps2spice.kicad_sch  ps2spice.wbk
common/: Cargo.toml
common/src/: hexfile.rs  lib.rs
compiler/: Cargo.toml
compiler/src/: backend.rs  call.rs  comparison.rs  ctxt.rs  expression.rs  func.rs  il.rs  ilsim.rs  j.pest  lib.rs  main.rs  optimize.rs  parse.rs  resolved.rs  stmt.rs  storage.rs  struct_def.rs  types.rs
digitalTester/: .classpath  .project
digitalTester/consoleTester/: .classpath  .gitignore  .project  Main.java  StdInKeyboard.java
digitalTester/consoleTester/src/consoleTester/: ConsoleTester.java  StdInKeyboard.java
digital_tester/: pom.xml
digital_tester/src/main/java/: InMemoryTerminal.java
digital_tester/src/main/java/com/johnterickson/: App.java  FixedKeyboard.java  InMemoryTerminal.java  StdInKeyboard.java
ghdl-rs/: .gitignore  Cargo.toml  build.rs  entry.c  vhpi.ver  vpi_thunk.h  vpi_user.h  wrapper.h
ghdl-rs/src/: lib.rs
logisim/: .gitignore  ParallelToPS2.dig  RAM.dig  alu.dig  bootram.hex  divide.hex  echo.hex  echo.j.hex  hello_ram.hex  io.dig  lutcomp.circ  lutcomp.dig  lutcomp_ev.circ  memory.dig  open.sh  pc.dig  ps2.dig  puts.hex  ram.dig  reg.dig  rpn.hex  rpn_ram.hex  test.bat  test.sh  test.txt  uc.dig
programs/: Queue.j  Stack.j  U64.j  add.j  add_u8.j  add_uptr.j  array_loop.j  array_to_ptr.j  boot.asm  bootram.j  call_parameterless.j  cmp_usize.j  div.j  divide.j  echo.asm  echo.j  echo_isr.j  echoline.j  fac_iter.j  fac_rec.j  fib.j  fib_memo.j  halt.j  halt_base_address.j  halt_ram.j  heap.j  heap_nofree.j  hello_ram.j  idfn.j  if_eq.j  if_gt.j  if_gte.j  if_lt.j  if_lte.j  if_ne.j  if_ne_uptr.j  if_neq_uptr.j  jmp.asm  keyboard_isr.j  local_array.j  (+13 more)
programs/app/: bootram.j  rpn.j
programs/lib/: Keyboard.j  Queue.j  U64.j  delay.j  div.j  heap.j  lcd.j  print_hex.j  ps2.j  rpnlib.j  stdio.j  strlen.j  strncmp.j  strstr.j
programs/test/: add_uptr.j  cmp_usize.j  echo.asm  echo.j  echo_lcd.j  else_if.j  fac_iter.j  fib.j  halt.j  halt_base_address.j  halt_ram.j  heap_nofree.j  hello_ram.j  if.j  keyboard_isr.j  keyboard_poll.j  local_array.j  puts.asm  queue_perf.j  static.j
sim/: Cargo.toml  build.rs
sim/src/: HD44780U.rs  hd44780u.rs  lcd.rs  lib.rs  ps2.rs  tty.rs
src/: assembly.pest  main.rs
tests/: 16add.asm  echo.asm  hi.asm
ucode/: Cargo.toml  rustfmt.toml
ucode/src/: lib.rs
