[workspace]
members = [
    "alu",
    "app",
    "assemble",
    "common",
    "compiler",
    "ghdl-rs",
    "sim",
    "ucode",
    ]
default-members = [
    "alu",
    "app",
    "assemble",
    "common",
    "compiler",
    "sim",
    "ucode",
    ]
    
exclude = [
    "arduino/sst39sf040-avr/flasher",
    ]

[profile.test]
#opt-level = 3

[profile.release]
debug = 1