[package]
name = "lutcomp"
version = "0.1.0"
authors = ["John Erickson <john.t.erickson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.18.0"
strum_macros = "0.18.0"
pest = "*"
pest_derive = "*"
static_assertions = "1.1.0"
packed_struct = "0.3"
packed_struct_codegen = "0.3"