[package]
name = "alu"
version = "0.1.0"
authors = ["John Erickson <john.t.erickson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
strum = "0.24.1"
packed_struct = "0.10.0"
packed_struct_codegen = "0.10.0"
lazy_static = "1.4.0"