[package]
name = "app"
version = "0.1.0"
authors = ["John Erickson <john.t.erickson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.18.0"
RustyXML = { git = "https://github.com/Florob/RustyXML", features = ["ordered_attrs"], rev = "d0450dbbf5dbd78598d07a40d94ba4b225dd2b99" }
alu = { path = "../alu" }
assemble = { path = "../assemble" }
common = { path = "../common" }
compiler = { path = "../compiler" }
sim = { path = "../sim" }
ucode = { path = "../ucode" }