[package]
name = "app"
version = "0.1.0"
authors = ["John Erickson <john.t.erickson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24.1"
alu = { path = "../alu" }
assemble = { path = "../assemble" }
common = { path = "../common" }
compiler = { path = "../compiler" }
sim = { path = "../sim" }
ucode = { path = "../ucode" }