[package]
name = "compiler"
version = "0.1.0"
authors = ["John Erickson <john.t.erickson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assemble = { path = "../assemble" }
common = { path = "../common" }
sim = { path = "../sim" }
pest = "*"
pest_derive = "*"
strum = "0.24.1"
packed_struct = "0.10.0"
topological-sort = "0.2.2"