[package]
authors = ["John Erickson <john.t.erickson@gmail.com"]
build = "build.rs"
name = "ghdl_rs"
version = "0.1.0"
edition = "2018"

[build-dependencies]
bindgen = "*"

[dependencies]
dlopen = "0.1.8"
strum = "0.24.1"
strum_macros = "0.24.3"
packed_struct = "0.10.0"
packed_struct_codegen = "0.10.0"
execute = "*"
libc = "*"