[package]
name = "sim"
version = "0.1.0"
authors = ["John Erickson <john.t.erickson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24.1"
packed_struct = "0.10.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
image = "*"
az = "1.2"
alu = { path = "../alu" }
common = { path = "../common" }
ucode = { path = "../ucode" }
ghdl_rs = { path = "../ghdl-rs" }

[build-dependencies]
ghdl_rs = { path = "../ghdl-rs" }