[package]
name = "ucode"
version = "0.1.0"
authors = ["John Erickson <john.t.erickson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
strum = "0.24.1"
strum_macros = "0.24.3"
packed_struct = "0.10.0"
packed_struct_codegen = "0.10.0"
lazy_static = "1.4.0"