[package]
name = "compiler"
version = "0.1.0"
authors = ["John Erickson <john.t.erickson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assemble = { path = "../assemble" }
common = { path = "../common" }
sim = { path = "../sim" }
pest = "*"
pest_derive = "*"
strum = "*"